--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     padding: 8px 30px !important;
     font-size: 25px !important;
 }
-.btn-info{
+.btn-danger{
     padding: 8px 30px !important;
     font-size: 25px !important;
     color: #fff !important;
